--- a/css/about.css
+++ b/css/about.css
@@ -5,14 +5,80 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 body {
-    background-color: rgb(1, 26, 41)
+    background-color: rgb(135, 135, 44);
 }
-.about {
+#rb-header {
+    background:rgb(190, 213, 222);
+    color:rgb(0,0,0);
+}
+#rb-header {
+    width: 100%;
+    height: 14vh;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.rb-logo {
+    width: 140;
+}
+nav ul li {
+    display: inline;
+    list-style: none;
+    margin: 10px 20px;
+    font-weight: 600;
+}
+nav ul li a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    position: relative;
+}
+nav ul li a >i {
+    margin: 5px;
+    font-size: 100%;
+}
+nav ul li a::after {
+    content:'';
+    width: 0;
+    height: 3px;
+    background: #0acd17;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+nav ul li a:hover::after {
+    width: 100%;
+}
+.rb-header-text {
+    margin-top: 20%;
+    font-size: 30px;
+}
+.rb-header-text h1 {
+    text-align: center;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+}
+.rb-header-text:hover {
+    color: rgba(34, 237, 0, 0.793);
+    transition: .4s ease;
+}
+.rb-container {
+    padding: 10px;
+}
+.rb-about {
     width: 100%;
     padding: 78 0px;
-    background-color: rgb(24, 24, 75);
+    background-color: rgb(72, 106, 128);
 }
-.about img {
+.rb-about img {
     margin: 50px 16px;
     width: 30em;
     height: 32em;
@@ -21,10 +87,10 @@ body {
     object-position: center;
     border-radius: 25px;
 }
-.about-text {
+.rb-about-text {
     width: 550px;
     font-weight: 400;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: large;
 }
 .main {
@@ -35,12 +101,12 @@ body {
     align-items: center;
     justify-content: space-around;
  }
- .about-text h1 {
+ .rb-about-text h1 {
     text-transform:capitalize;
     font-size: 60px;
     margin: 20px;
 }
- .about-text h5 {
+ .rb-about-text h5 {
     text-transform: capitalize;
     font-size: 25px;
     margin-bottom: 25px;
@@ -54,7 +120,7 @@ body {
 
  }
 button {
-    background-color: rgb(0, 11, 32);
+    background-color: rgb(9, 142, 29);
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -62,11 +128,10 @@ button {
     cursor: pointer;
     padding: 20px 30px;
     margin: 15px;
-    border-radius: 20px;
     transition: .4s ease;
 }
-button :hover {
-    background: transparent;
+button:hover {
+    background-color:rgb(34, 36, 196);
     border: 2px solid rgb(142, 10, 10)(93,0,255);
     border-radius: 20px;
     cursor: pointer;
