foto+, home dropdown,login, about

--- a/css/home.css
+++ b/css/home.css
@@ -56,6 +56,33 @@ nav ul li a::after{
 nav ul li a:hover::after {
     width: 100%;
 }
+.dropdown {
+    min-width: 130px;
+    padding: 5px 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    position: absolute;
+    top: 45px;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 25px 50px -12px;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.2s ease-in-out;
+}
+li:hover .dropdown {
+    opacity: 1;
+    visibility: visible;
+    top: 60px;
+}
+.dropdown a {
+    font-size: 14px;
+    border-bottom: 1px solid black ;
+    margin-top: 10%;
+    padding-bottom: 10px;
+}
+
 .rb-header-text{
     margin-top: 20%;
     font-size: 30px;
@@ -69,5 +96,4 @@ nav ul li a:hover::after {
 .rb-header-text:hover {
     color: rgba(34, 237, 27, 0.793);
     transition: .4s ease;
-
 }
