--- a/css/home.css
+++ b/css/home.css
@@ -1,17 +1,18 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     box-sizing: border-box;
 }
+/*Header*/
 #rb-home-design {
     background: rgb(190, 213, 222);
     color: rgb(0, 0, 0);
-
-}
-#rb-header {
     width: 100%;
-    height: 100vh;
+    height: 14vh;
+    position: sticky;
+    z-index: 1;
+    top: 0;
 }
 .rb-container {
     padding: 10px;
@@ -22,7 +23,6 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-
 }
 .rb-logo {
     width: 140;
@@ -82,18 +82,50 @@ li:hover .dropdown {
     margin-top: 10%;
     padding-bottom: 10px;
 }
-
 .rb-header-text{
-    margin-top: 20%;
+    margin-top: 15%;
     font-size: 30px;
 }
 .rb-header-text h1 {
     text-align: center;
-    font-size: 40px;
+    text-transform: capitalize;
+    font-size: 30px;
     display: flex;
     justify-content: center;
 }
 .rb-header-text:hover {
     color: rgba(34, 237, 27, 0.793);
     transition: .4s ease;
+}
+/*Section*/
+.rb-section-text {
+    background-color: rgb(86, 142, 151);
+}
+.rb-section-text h1 {
+    color: azure;
+    text-align: left;
+    width: 100%;
+    height: 50vh;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+}
+.rb-section-text img {
+    background-repeat: no-repeat;
+    object-fit: cover;
+    object-position: center;
+    width: 50vw;
+    height: 50vh;
+    margin-left: 50%;
+    margin-top: -22%;
+    margin-bottom: 3%;
+}
+.rb-section-text h1:hover {
+    color: rgba(34, 237, 27, 0.793);
+    transition: .5s ease;
+}
+.rb-section-text img:hover {
+    border: 3px solid rgb(1, 20, 43);
+    border-radius: 10%;
+    box-shadow: 5px 5px rgb(4, 22, 88);
 }
