--- a/css/home.css
+++ b/css/home.css
@@ -16,9 +16,8 @@
 }
 .rb-container {
     padding: 10px;
-
 }
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -99,26 +98,24 @@ li:hover .dropdown {
 }
 /*Section*/
 .rb-section-text {
-    background-color: rgb(86, 142, 151);
+    background-color: rgb(61, 123, 132);
 }
 .rb-section-text h1 {
     color: azure;
-    text-align: left;
     width: 100%;
-    height: 50vh;
-    padding: 5%;
+    height: 70vh;
+    margin-left: 15%;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
 }
 .rb-section-text img {
     background-repeat: no-repeat;
     object-fit: cover;
     object-position: center;
-    width: 50vw;
-    height: 50vh;
-    margin-left: 50%;
-    margin-top: -22%;
-    margin-bottom: 3%;
+    width: 35vw;
+    height: 40vh;
+    margin: 10%;
 }
 .rb-section-text h1:hover {
     color: rgba(34, 237, 27, 0.793);
