--- a/css/services.css
+++ b/css/services.css
@@ -4,4 +4,28 @@
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+.rb-services-home {
+    text-align: center;
+    color: rgb(1, 1, 32);
+    font-weight: bold;
+    font-size: 30%;
+    margin: 20px 5px;
+}
+.rb-services a {
+   text-decoration: none;
+}
+.rb-services img {
+    width: 45%;
+    height: 50vh;
+    font-size: 15px;
+    object-fit: cover;
+    object-position: center;
+    display: flex;
+    justify-content: center;
+}
+.rb-services p {
+   font-size: 10px;
+   font-weight: 700;
+   text-align: center;
+}
 
