--- a/css/login.css
+++ b/css/login.css
@@ -3,11 +3,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
 /*Section*/
-
 .rb-container {
     height: 100vh;
     width: 100%;
@@ -15,34 +13,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 5%;
 }
 .rb-form {
     background-color: white;
     border: 2px solid black;
-    border-radius: 5px;
-    max-width: 480px;
-    width: 100%;
-    padding: 30px;
+    border-radius: 8%;
+    max-width: 450px;
+    padding: 5%;
 }
-.rb-header {
-    font-weight: 500;
+.rb-heading {
+    font-weight: 600;
     font-size: 30px;
     color: rgb(8, 61, 137);
     text-align: center;
-}
-form {
-    margin-top: 30px;
 }
 form .rb-field {
     position: relative;
     height: 50px;
     width: 100%;
-    margin-top: 25px;
+    margin-top: 8%;
 }
 .rb-eyes-icon{
     position: absolute;
     transform: translateY(-50%);
-    color: grey;
+    color: rgb(87, 87, 87);
     top: 50%;
     right: 10px;
 }
@@ -51,7 +46,7 @@ form .rb-field {
     color: white;
 }
 .rb-field button:hover {
-    background-color:rgb(38, 68, 76);
+    background-color:rgb(10, 41, 143);
     color: rgb(255, 247, 247);   
 }
 .rb-field  input ,.rb-field button {
@@ -64,10 +59,7 @@ form .rb-field {
 }
 .rb-field input{
     border: 1px solid black;
-    padding: 0 15px;
-}
-.rb-field input:focus {
-    border-bottom-width: 2px;
+    padding: 10px 15px;
 }
 .rb-form-link {
     text-align: right;
@@ -75,7 +67,7 @@ form .rb-field {
 }
 .rb-form-link p {
     text-align: center;
-    font-size: 20px;
+    font-size: 100%;
     font-weight: 500;
 }
 .rb-form a {
@@ -86,7 +78,8 @@ form .rb-field {
     text-decoration: underline;
 }
 @media screen and (max-width: 768px){
-   .form {
-    padding: 15px 10px;
+   .rb-form {
+     width: 100%;
    }
 }
+
