--- a/css/terms.css
+++ b/css/terms.css
@@ -1,8 +1,6 @@
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
-
