--- a/css/about.css
+++ b/css/about.css
@@ -4,54 +4,6 @@
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-/*Header */
-#rb-header {
-    background:rgb(190, 213, 222);
-    color:rgb(0,0,0);
-    width: 100%;
-    height: 14vh;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-}
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.rb-logo {
-    width: 140;
-}
-nav ul li {
-    display: inline;
-    list-style: none;
-    margin: 10px 20px;
-    font-weight: 600;
-}
-nav ul li a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 18px;
-    position: relative;
-}
-nav ul li a >i {
-    margin: 5px;
-    font-size: 100%;
-}
-nav ul li a::after {
-    content:'';
-    width: 0;
-    height: 3px;
-    background: #44aa4b;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-}
-nav ul li a:hover::after {
-    width: 100%;
-}
 /*Section*/
 .rb-container {
     padding: 10px;
@@ -89,7 +41,7 @@ nav ul li a:hover::after {
     text-align: left;
     font-weight: 600;
 }
- .rb-about-text h5 {
+.rb-about-text h5 {
     text-transform: capitalize;
     font-size: 25px;
     margin-bottom: 25px;
@@ -100,7 +52,7 @@ span {
     font-size: 18px;
     margin-bottom: 45px;
 }
-button {
+.rb-button {
     background-color: rgb(9, 142, 29);
     color: white;
     text-decoration: none;
@@ -109,7 +61,7 @@ button {
     padding: 20px 30px;
     transition: .4s ease;
 }
-button:hover {
+.rb-button:hover {
     background-color:rgb(34, 36, 196);
     border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
