--- a/css/home.css
+++ b/css/home.css
@@ -4,104 +4,15 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     box-sizing: border-box;
 }
-/*Header*/
-#rb-home-design {
-    background: rgb(190, 213, 222);
-    color: rgb(0, 0, 0);
-    width: 100%;
-    height: 14vh;
-    position: sticky;
-    z-index: 1;
-    top: 0;
-}
-.rb-container {
-    padding: 10px;
-}
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.rb-logo {
-    width: 140;
-}
-nav ul li {
-    display: inline-block;
-    list-style-type: none;
-    margin: 10px 20px;
-    font-weight: 600;
-}
-nav ul li a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 18px;
-    position: relative;
-}
-nav ul li a >i {
-   margin: 5px;
-   font-size: 100%;
-}
-nav ul li a::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #0acd17;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-}
-nav ul li a:hover::after {
-    width: 100%;
-}
-.dropdown {
-    min-width: 130px;
-    padding: 5px 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    top: 45px;
-    border-radius: 8px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 25px 50px -12px;
-    opacity: 0;
-    transition: 0.2s ease-in-out;
-}
-li:hover .dropdown {
-    opacity: 1;
-    visibility: visible;
-    top: 60px;
-}
-.dropdown a {
-    font-size: 14px;
-    border-bottom: 1px solid black ;
-    margin-top: 10%;
-    padding-bottom: 10px;
-}
-.rb-header-text{
-    margin-top: 15%;
-    font-size: 30px;
-}
-.rb-header-text h1 {
-    text-align: center;
-    text-transform: capitalize;
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-}
-.rb-header-text:hover {
-    color: rgba(34, 237, 27, 0.793);
-    transition: .4s ease;
-}
 /*Section*/
 .rb-section-text {
     background-color: rgb(61, 123, 132);
 }
 .rb-section-text h1 {
     color: azure;
-    height: 70vh;
-    margin-left: 15%;
+    height: 80vh;
+    margin-left: 10%;
+    margin-top: 20%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -111,12 +22,12 @@ li:hover .dropdown {
     object-fit: cover;
     object-position: center;
     height: 50vh;
-    width: 40vw;
-    margin: 5%;
+    margin: 30% 5% 20% 5%;
 }
 .rb-section-text h1:hover {
     color: rgba(34, 237, 27, 0.793);
-    transition: .5s ease;
+    transition: .3s ease;
+    transform: rotate(360deg);
 }
 .rb-section-text img:hover {
     border: 3px solid rgb(1, 20, 43);
