--- a/css/services.css
+++ b/css/services.css
@@ -4,5 +4,9 @@
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
-
+.carousel-item h5 {
+    font-size: 20px;
+}
+.carousel-item p{
+    font-size: 15px;
+}
