--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,6 @@
 body {
     width: 100%;
     height: 100vh;
-
 }
 .rb-container {
     position: relative;
@@ -16,7 +15,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 28% 10%;
+    padding: 15% 10%;
 }
 .rb-container:after{
     content: ' ';
@@ -29,7 +28,6 @@ body {
     background-size: cover;
     z-index: -1;
     filter: blur(50px);
-    
 }
 .rb-contact-box {
     max-width: 850px;
@@ -39,7 +37,7 @@ body {
     align-items: center;
     text-align: center;
     background-color: white;
-
+    border-radius: 20%;
 }
 .rb-left {
     height: 100%;
@@ -47,7 +45,7 @@ body {
     background-size: cover;
 }
 .rb-right {
-     padding: 25px 40px;
+    padding: 20px 40px;
 }
 h2 {
     position: relative;
@@ -57,27 +55,30 @@ h2 {
 .rb-field {
     width: 100%;
     font-size: 1.1rem;
-    border: 2px solid rgb(52, 221, 10);
+    border: 2px solid rgb(0, 0, 0);
     margin-bottom: 8%;
     transition: .4s;
 }
 .rb-field:hover {
-    background-color: greenyellow;
+    background-color: rgb(242, 190, 190);
+    color: white;
 }
 .rb-field:focus {
-    background-color: rgb(20, 230, 153);
+    background-color: rgb(145, 213, 158);
     color: rgb(0, 0, 0);
 }
 .rb-btn {
     color: white;
-    background-color: rgb(0, 78, 4);
+    background-color: rgb(65, 200, 71);
     padding: 2%;
     font-size: 1.1rem;
-    box-shadow: 2px 2px rgb(3, 2, 2);
-
+    box-shadow: 2px 3px rgb(11, 144, 9);
+    border-radius: 90%;
 }
 .rb-btn:hover {
-   transform: rotate(360deg); 
+   transform: rotate(280deg);
+   background-color: rgb(0, 0, 0); 
+   color: rgb(239, 239, 239);
 }
 @media screen and (max-width: 768px){
     .rb-contact-box {
