--- a/css/terms.css
+++ b/css/terms.css
@@ -4,3 +4,6 @@
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+#rb-home-design {
+    background-color: rgb(170, 115, 115);
+}
