--- a/css/about.css
+++ b/css/about.css
@@ -6,7 +6,7 @@
 }
 /*Section*/
 .rb-container {
-    padding: 10px;
+    padding-top: 10px;
 }
 .rb-about {
     background-color: rgb(81, 123, 151);
@@ -17,7 +17,7 @@
     background-repeat: no-repeat;
     object-position: center;
     border-radius: 25px;
-    margin-top: 5%, 5%;
+    margin: 5%, 5%;
 }
 .rb-about img:hover {
     border: 2px solid rgb(0, 0, 0);
@@ -37,7 +37,7 @@
 .rb-about-text h1 {
     text-transform:capitalize;
     font-size: 50px;
-    margin: 20px 0px;
+    margin: 30px 0px;
     text-align: left;
     font-weight: 600;
 }
@@ -45,6 +45,7 @@
     text-transform: capitalize;
     font-size: 25px;
     margin-bottom: 25px;
+    font-weight: 600;
 }
 span {
     color: #fcf;
@@ -66,4 +67,20 @@ span {
     border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
 }
-
+.navbar-brand img {
+    max-width: 100%;
+    display: flex;
+    
+    justify-content: flex-start;
+    position: relative;
+    right: 1125px;
+}
+.navbar-toggler, .text-bg-dark{
+    height: 40px;
+    align-items: center;
+}
+@media screen and(max-width: 768px){
+    .navbar-brand img {
+     
+    }
+}
