--- a/css/contact.css
+++ b/css/contact.css
@@ -8,6 +8,7 @@ body {
     width: 100%;
     height: 100vh;
 }
+/*Section*/
 .rb-container {
     position: relative;
     display: flex;
@@ -57,6 +58,7 @@ h2 {
     font-size: 1.1rem;
     border: 2px solid rgb(0, 0, 0);
     margin-bottom: 8%;
+    padding: 2%;
     transition: .4s;
 }
 .rb-field:hover {
@@ -76,9 +78,23 @@ h2 {
     border-radius: 90%;
 }
 .rb-btn:hover {
-   transform: rotate(280deg);
    background-color: rgb(0, 0, 0); 
    color: rgb(239, 239, 239);
+   animation: beat .5s infinite;
+}
+@keyframes beat {
+    0% {
+        transform: scale(.5);
+    }
+    50% {
+        transform: scale(.6);
+    }
+    70% {
+        transform: scale(.7);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 @media screen and (max-width: 768px){
     .rb-contact-box {
