--- a/css/table.css
+++ b/css/table.css
@@ -4,38 +4,20 @@
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-table {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    border-collapse: separate;
-    transform: translate(-50%,-50%);
-    width: 800px;
-    border-spacing: 0 8px;
-    border: 3px solid rgb(207, 1, 138);
-    box-shadow: 2px 2px 10px rgb(29, 28, 28), -1px -1px 5px rgb(78, 1, 1);
+body {
+    background-color: aquamarine;
 }
-tr {
-    transition: all .3s ease-in;
-    cursor: pointer;
+.rb-table-box {
+    margin: 50px auto;
+
 }
-th, td {
-    padding: 12px;
-    text-align: left;
-    border: 1px solid black;
-}
-.rb-header {
-    background-color: chartreuse;
-    color: white;
-}
-h1 {
-    background-color: chartreuse;
-    color: white;
-    font-weight: 700;
-    text-align: center;
-    padding: 10px 0px;
-}
-tr:hover {
-    background-color: rgb(216, 144, 37);
-    transform: scale(300deg);
+.rb-table-row {
+    display: table;
+    width: 80%;
+    margin: 10px auto;
+    padding: 12px auto;
+    background: transparent;
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+    box-shadow: 0px 1px 4px auto rgb(0, 0, 0);
 }
