--- a/css/about.css
+++ b/css/about.css
@@ -17,7 +17,7 @@
     background-repeat: no-repeat;
     object-position: center;
     border-radius: 25px;
-    margin: 5%, 5%;
+    margin-bottom: 5%;
 }
 .rb-about img:hover {
     border: 2px solid rgb(0, 0, 0);
@@ -29,7 +29,7 @@
 }
 .rb-main {
     max-width: 95%;
-    margin: 0 auto;
+    margin-top: 12%;
     display: flex;
     align-items: center;
     justify-content: center;
