--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,9 @@
 *{
-    margin: 0;
-    padding: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
     box-sizing: border-box;
 }
 /*Section*/
-.rb-section-text {
+section {
     background-color: rgb(61, 123, 132);
 }
 .rb-section-text h1 {
