--- a/css/table.css
+++ b/css/table.css
@@ -18,11 +18,13 @@ body {
    padding: 10px;
 
 }
+table, tr,th, td {
+    border: 1px solid black !important;
+    border-collapse: collapse;
+  }
+
 table {
     width: 100%;
-    border-collapse: collapse;
-
-
 }
 th, td {
     border: 1px solid #000000;
