--- a/css/contact.css
+++ b/css/contact.css
@@ -1,15 +1,13 @@
 * {
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Open Sans',sans-serif serif;
 }
 body {
     width: 100%;
     height: 100vh;
 }
 /*Section*/
-.rb-container {
+.rb-box {
     position: relative;
     display: flex;
     justify-content: center;
@@ -18,14 +16,14 @@ body {
     height: 100%;
     padding: 15% 10%;
 }
-.rb-container:after{
+.rb-box:after{
     content: ' ';
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background:url(../fotot/image1.jpg) no-repeat center;
+    background: url(../fotot/image1.jpg) no-repeat center;
     background-size: cover;
     z-index: -1;
     filter: blur(50px);
