--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,10 @@
 *{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
 }
 /*Section*/
 section {
-    background-color: rgb(61, 123, 132);
+    background-color: rgb(98, 161, 170);
 }
 .rb-section-text h1 {
     color: azure;
@@ -20,7 +20,9 @@ section {
     object-fit: cover;
     object-position: center;
     height: 50vh;
+    max-width: calc(100%-10vw);
     margin: 20% 5% 20% 5%;
+    width: 100%;
 }
 .rb-section-text h1:hover {
     color: rgba(34, 237, 27, 0.793);
@@ -30,5 +32,5 @@ section {
 .rb-section-text img:hover {
     border: 3px solid rgb(1, 20, 43);
     border-radius: 10%;
-    box-shadow: 5px 5px rgb(4, 22, 88);
+    box-shadow: 2px 6px rgb(4, 22, 88);
 }
