--- a/css/home.css
+++ b/css/home.css
@@ -20,7 +20,7 @@ section {
     object-fit: cover;
     object-position: center;
     height: 50vh;
-    max-width: calc(100%-10vw);
+    max-width: calc(100%-10%);
     margin: 20% 5% 20% 5%;
     width: 100%;
 }
