--- a/css/designers.css
+++ b/css/designers.css
@@ -1,52 +1,68 @@
 *{
     box-sizing: border-box;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+/*Section*/
+section {
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+h1 {
+    text-align: center;
+    padding: 5px;
 }
 .rb-table {
-    background-color: rgb(159, 233, 208);
+    background-color: rgb(185, 192, 188);
     width: 100%;
-    min-height: 100vh;
+    min-height: 70vh;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .rb-content {
-   width: 800px;
    padding: 10px;
 }
 table, tr, td, th {
-    border: 1px solid black !important;
+    border: 1px solid rgb(255, 255, 255) !important;
     border-collapse: collapse;
 }
 table {
-    width: 100%;
+    width: 90%;
 }
 th, td {
-    border: 1px solid #000000;
     margin: 5px;
     padding: 10px;
-    box-sizing: border-box;
+    color: white;
 }
 th {
-    background-color: blueviolet;
-    color: blanchedalmond;
+    background-color: rgb(0, 0, 0);
 }
 td {
-    background-color: rgb(162, 118, 204);
-    color: #fffafa;
+    background-color: rgb(37, 43, 38);
 }
-@media (max-width: 768px){
+.rb-job {
+    text-decoration: none;
+    color:#ffffff;
+}
+td span a:hover{
+    text-decoration: overline;
+    color: rgb(41, 241, 22);
+}
+@media (max-width: 567px){
     thead {
        display: none;
    }
-   .rb-table, tbody,tr, td {
+   .rb-table, tbody, tr, td {
        display: block;
-       width: 100%;
     }
     tr {
         margin-bottom: 20px;
-
+    }
+    .rb-table {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     td::before {
         content: attr(data-label);
@@ -54,15 +70,14 @@ td {
         left: 0;
         width:30%;
         text-align: center;
-        padding: 10px 0 10px 10px;
         font-weight: bold;
+        margin: 10px;
     }
     td {
         padding: 0;
         padding-left: 30%;
         position: relative;
-        background-color: aquamarine;
-        color: black;
+        color: rgb(255, 253, 253);
     }
     td  span {
         display: block;
@@ -70,9 +85,9 @@ td {
         padding: 10px;
         background-color: aliceblue;
         color: black;
+        text-align: justify;
     }
-}
-.rb-job {
-    text-decoration: none;
-    color: beige;
+    .rb-job {
+        color: black;
+    }
 }
