--- a/css/terms.css
+++ b/css/terms.css
@@ -49,6 +49,7 @@
     font-size: 20px;
     padding: 10px 0px 10px;
     color: rgb(0, 0, 0);
+    text-align: center;
 }
 .box p {
     color:rgb(11, 5, 17);
