--- a/css/home.css
+++ b/css/home.css
@@ -4,11 +4,11 @@
 }
 /*Section*/
 section {
-    background-color: rgb(98, 161, 170);
+    background-color: rgb(129, 175, 182);
 }
 .rb-section-text h1 {
     color: azure;
-    height: 80vh;
+    height: 60vh;
     margin-left: 10%;
     margin-top: 20%;
     display: flex;
@@ -16,21 +16,25 @@ section {
     justify-content: flex-start;
 }
 .rb-section-text img {
-    background-repeat: no-repeat;
     object-fit: cover;
     object-position: center;
     height: 50vh;
-    max-width: calc(100%-10%);
-    margin: 20% 5% 20% 5%;
+    margin: 25% 5% 25% 5%;
     width: 100%;
+    border-radius: 3%;
 }
 .rb-section-text h1:hover {
-    color: rgba(34, 237, 27, 0.793);
+    color: rgba(18, 10, 122, 0.793);
     transition: .3s ease;
     transform: rotate(360deg);
 }
 .rb-section-text img:hover {
     border: 3px solid rgb(1, 20, 43);
-    border-radius: 10%;
-    box-shadow: 2px 6px rgb(4, 22, 88);
+    border-radius: 15%;
+    box-shadow: 2px 4px rgb(4, 22, 88);
+}
+@media only screen and (max-width: 576px){
+    .rb-section-text img {
+        margin: 0px 0px 5px 0px;
+    }
 }
