--- a/css/services.css
+++ b/css/services.css
@@ -6,11 +6,17 @@
     font-size: 20px;
     font-weight: 700;
 }
+.rb-section {
+    background-color:rgb(230, 225, 225);
+}
+.rb-section p {
+    text-align: justify;
+}
 @media only screen and (max-width: 567px){
     .rb-section {
-        font-size: 50%;
+        font-size: 40%;
         font-weight: 700;
-        background-color: rgb(100, 96, 96);
+        background-color: rgb(248, 247, 247);
         color: black;
     }
 }
