--- a/css/history.css
+++ b/css/history.css
@@ -3,8 +3,15 @@
     box-sizing: border-box;
 } 
 /*Section*/
-.rb-history {
+.rb-section-history {
     background-color: #e2eecf;
+}
+.rb-text {
+    width: 100%;
+}
+.rb-heading-text {
+    text-align: center;
+    margin-top: 3%;
 }
 .rb-card-container {
     display: flex;
