--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 /*Section*/
-.rb-section-contain::after {
+section::after {
     content: '';
     position: absolute;
     top: 0;
@@ -28,8 +28,8 @@
     object-fit: cover;
     object-position: center;
     height: 50vh;
-    margin: 25% 5% 25% 5%;
-    width: 100%;
+    margin: 25% 8% 25% 5%;
+    width: 90%;
     border-radius: 3%;
 }
 .rb-section-contain h1:hover {
@@ -43,12 +43,23 @@
     box-shadow: 2px 4px rgb(207, 50, 11);
 }
 @media only screen and (max-width: 576px){
-    .rb-section-contain img {
-        margin: 0 0 5% 0;
-    }
     .rb-section-contain h1 {
+        color: rgb(110, 67, 1);
+        font-weight: bold;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    section::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../fotot/index-image.jpg);
+        background-size: cover;
+        z-index: -1;
+        filter: blur(70px);
     }
 }
