--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: 'Open Sans',sans-serif serif;
+    font-family: 'Open Sans',sans-serif;
 }
 body {
     width: 100%;
@@ -23,10 +23,10 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background: url(../fotot/image1.jpg) no-repeat center;
+    background: url(../fotot/contact.jpg) no-repeat center;
     background-size: cover;
     z-index: -1;
-    filter: blur(50px);
+    filter: blur(35px);
 }
 .rb-contact-box {
     max-width: 850px;
@@ -40,7 +40,7 @@ body {
 }
 .rb-left {
     height: 100%;
-    background: url("../fotot/image1.jpg") no-repeat center;
+    background: url("../fotot/contact.jpg") no-repeat center;
     background-size: cover;
 }
 .rb-right {
