--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,17 @@ section::after {
     border-radius: 15%;
     box-shadow: 2px 4px rgb(207, 50, 11);
 }
+.rb-class::after {
+    
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+}
 @media only screen and (max-width: 576px){
     .rb-section-contain h1 {
         color: rgb(110, 67, 1);
