--- a/css/contact.css
+++ b/css/contact.css
@@ -92,14 +92,23 @@ h2 {
     }
     100% {
         transform: scale(1);
-    }
+    } 
 }
-@media screen and (max-width: 768px){
+@media only screen and (max-width: 768px){
+     .rb-left {
+        object-fit: cover;
+        object-position: center;
+     }
+}
+@media only screen and (max-width: 375px){
     .rb-contact-box {
         grid-template-columns: 1fr;
     }
     .rb-left {
-        height: 200px;  
+        height: 200px;
+    }
+    .rb-btn {
+        font-size: 60%;
     }
 }
   
