--- a/css/contact.css
+++ b/css/contact.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
     font-family: 'Open Sans',sans-serif;
 }
-body {
-    width: 100%;
-    height: 100vh;
-}
 /*Section*/
 .rb-box {
     position: relative;
@@ -14,8 +10,9 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 10% 5%;
+    padding: 8% 4%;
 }
+/*Design after the page*/
 .rb-box:after{
     content: ' ';
     position: absolute;
@@ -67,19 +64,20 @@ h2 {
     background-color: rgb(145, 213, 158);
     color: rgb(0, 0, 0);
 }
+/*Button*/
 .rb-btn {
     color: white;
     background-color: rgb(65, 200, 71);
-    padding: 4%;
-    font-size: 1rem;
+    padding: 5%;
     box-shadow: 2px 3px rgb(11, 144, 9);
-    border-radius: 90%;
+    border-radius: 40%;
 }
 .rb-btn:hover {
    background-color: rgb(0, 0, 0); 
    color: rgb(239, 239, 239);
    animation: beat .5s infinite;
 }
+/*Animation according to the rendering rate called 'beat'*/
 @keyframes beat {
     0% {
         transform: scale(.5);
@@ -94,21 +92,47 @@ h2 {
         transform: scale(1);
     } 
 }
+/*Only for large devices*/
 @media only screen and (max-width: 768px){
-     .rb-left {
+    .rb-left {
         object-fit: cover;
         object-position: center;
-     }
+    }
+   .rb-box:after{
+        content: ' ';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../fotot/contact.jpg) no-repeat center;
+        background-size: cover;
+        z-index: -1;
+        filter: blur(55px);
+    }
 }
+/*Only for small devices*/
 @media only screen and (max-width: 375px){
+    /*To made two parts in one row*/
     .rb-contact-box {
         grid-template-columns: 1fr;
     }
+    /*To show photos with this height*/
     .rb-left {
         height: 200px;
     }
-    .rb-btn {
-        font-size: 60%;
+    /*Design after page*/
+   .rb-box:after{
+       content: ' ';
+       position: absolute;
+       left: 0;
+       top: 0;
+       width: 100%;
+       height: 100%;
+       background: url(../fotot/contact.jpg) no-repeat center;
+       background-size: cover;
+       z-index: -1;
+       filter: blur(85px);
     }
 }
   
